--- a/commerce/auctions/templates/auctions/listing.html
+++ b/commerce/auctions/templates/auctions/listing.html
@@ -11,7 +11,7 @@
 
     <h4>Starting Bid: {{ listing.bids.starting_bid}}</h4>
 
-    <div> Auction ends: {{ auction.end_time }}</div>
+    <div> Auction ends: {{ listing.end_time }}</div>
     
     {% if request.user.is_authenticated %}
 
