--- a/commerce/auctions/templates/auctions/listing_batch.html
+++ b/commerce/auctions/templates/auctions/listing_batch.html
@@ -19,6 +19,7 @@
         <div class="row no-gutters">
             <div class="col-md-12">
                 <div class="card-footer">
+                    <a href="./listing/{{listing.id}}" class="card-link">View item</a>
                     <a href="#" class="card-link">Bid Now</a>
                     <a href="#" class="card-link">Add to watchlist</a>
                 </div>
