Work on create new listing form and page

--- a/commerce/auctions/templates/auctions/create.html
+++ b/commerce/auctions/templates/auctions/create.html
@@ -2,8 +2,8 @@
 
 {% block body %}
 
-<div class="container">
-    <div class="title">Create New Listing</div>
+
+    <h2>Create New Listing</h2>
 
     <form method="POST">
         {% csrf_token %}
@@ -15,4 +15,4 @@
         </div>
 
     </form>
-{{% endblock %}}
+{% endblock %}
