--- a/commerce/auctions/templates/auctions/create.html
+++ b/commerce/auctions/templates/auctions/create.html
@@ -11,7 +11,7 @@
             <table>
                 {{ form.as_table}}
             </table>
-            <input class="btn-primary" type="submit" value="Create" />
+            <input class="btn-primary" type="submit" value="save" />
         </div>
 
     </form>
