--- a/commerce/auctions/static/auctions/styles.css
+++ b/commerce/auctions/static/auctions/styles.css
@@ -2,8 +2,8 @@ body {
 	padding: 10px;
 }
 
-.card-img-top {
+.card-img {
+	object-fit: scale-down;
 	width: 100%;
-	height: 18rem;
-	object-fit: cover;
+	height: 100%;
 }
