--- a/commerce/auctions/templates/auctions/bid.html
+++ b/commerce/auctions/templates/auctions/bid.html
@@ -3,7 +3,7 @@
 {% block body %}
 
 
-    <h2>Create New Listing</h2>
+    <h2>Bid</h2>
 
     <form method="POST">
         {% csrf_token %}
@@ -11,7 +11,7 @@
             <table>
                 {{ form.as_table}}
             </table>
-            <input class="btn-primary" type="submit" value="create" />
+            <input class="btn-primary" type="submit" value="bid" />
         </div>
 
     </form>
