--- a/commerce/auctions/templates/auctions/listing_batch.html
+++ b/commerce/auctions/templates/auctions/listing_batch.html
@@ -1,30 +1,31 @@
 <div class="card-deck">
     {% for listing in listings %}
-    <div class="card mb-3" style="max-width: 540px;">
-        <div class="row no-gutters">  
-            <div class="col-md-4">
-                <img src="{{listing.picture_link}}" class="card-img" alt="Product image">
-            </div>  
-            <div class="col-md-8">
-                <h5 class="card-title">{{ listing.name }}</h5>
-                <p class="card-text">{{ listing.description}}</p>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Auctioneer: {{listing.auctioneer}}</li>
-                    <li class="list-group-item">Starting bid: {{ listing.starting_bid }}</li>
-                    <li class="list-group-item">Start time: {{ listing.start_time }}</li>
-                    <li class="list-group-item">End time: {{ listing.end_time }}</li>
-                </ul>
-            </div>
-        </div>
-        <div class="row no-gutters">
-            <div class="col-md-12">
-                <div class="card-footer">
-                    <a href="./listing/{{listing.id}}" class="card-link">View item</a>
-                    <a href="#" class="card-link">Bid Now</a>
-                    <a href="#" class="card-link">Add to watchlist</a>
+        <div class="card mb-3" style="min-width: 100%; max-width:100%; max-height: 15rem; min-height: 1rem;">
+            <div class="row no-gutters">  
+                <div class="col-md-2">
+                    <img src="{{listing.picture_link}}" class="card-img" alt="Product image">
+                </div>  
+                <div class="col-md-8">
+                    <h5 class="card-title">{{ listing.name }}</h5>
+                    <p class="card-text">{{ listing.description}}</p>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">Auctioneer: {{ listing.auctioneer }}</li>
+                        <li class="list-group-item">Starting bid: {{ listing.starting_bid }}</li>
+                        <li class="list-group-item">Start time: {{ listing.start_time }}</li>
+                        <li class="list-group-item">End time: {{ listing.end_time }}</li>
+                    </ul>
+                </div>
+                <div class="col-md-2">
+                    <div class="card-body">
+                        <nav class="nav nav-pills">
+                                    <a href="./listing/{{listing.id}}" class="nav-item nav-link">View</a>
+                                    <a href="./listing/{{listing.id}}/bid" class="nav-item nav-link">Bid</a>
+                                    <a href="#" class="nav-item nav-link">Watchlist</a>
+                                    <a href="#" class="nav-item nav-link {{visibility}}" tab-index="{{tab_index}}" aria-disabled="{{aria_disabled}}">End</a>   
+                        </nav>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
     {% endfor %}
 </div>
