--- a/commerce/auctions/templates/auctions/layout.html
+++ b/commerce/auctions/templates/auctions/layout.html
@@ -40,13 +40,7 @@
         {% block body %}
         {% endblock %}
         {% block footer %}
-            {% if messages %}
-                <ul class="messages">
-                    {% for message in messages %}
-                        <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-                    {% endfor %}
-                </ul>
-            {% endif %}
+            {% include auctions/listings/messages.html %}
         {% endblock %}
     </body>
 </html>
