Fix folder structure for includes

--- a/commerce/auctions/templates/auctions/index.html
+++ b/commerce/auctions/templates/auctions/index.html
@@ -3,6 +3,6 @@
 {% block body %}
     
     <h2>Active Listings</h2>
-    {% include "auctions/listing_batch.html" %}
+    {% include "/auctions/includes/listing_batch.html" %}
     
 {% endblock %}
