--- a/commerce/auctions/templates/auctions/layout.html
+++ b/commerce/auctions/templates/auctions/layout.html
@@ -8,44 +8,29 @@
         <link href="{% static 'auctions/styles.css' %}" rel="stylesheet">
     </head>
     <body>
-        <div class="col-md-12">
-            <h1>T-Bay</h1>
-            <div>
-                {% if user.is_authenticated %}
-                    Signed in as <strong>{{ user.username }}</strong>.
-                {% else %}
-                    Not signed in.
-                {% endif %}
+        <div class="container">
+            <div class="row">
+                <h1>T-Bay</h1>
+                <div>
+                    {% if user.is_authenticated %}
+                        Signed in as <strong>{{ user.username }}</strong>.
+                    {% else %}
+                        Not signed in.
+                    {% endif %}
+                </div>
             </div>
+            <div class="row">
+                <div class="col-sm-3">
+                    {% include "auctions/includes/nav.html" %}
+                </div>
+                <div class="col-md-9">
+                    {% block body %}
+                    {% endblock %}
+                </div>
+            </div>
+            
         </div>
-        <div class="col-md-3">
-            <ul class="nav flex-column nav-tabs">
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'index' %}">Active Listings</a>
-                </li>
-                {% if user.is_authenticated %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'create' %}">Create new listing</a>
-                    </li>
-                {% else %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'login' %}">Log In</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'register' %}">Register</a>
-                    </li>
-                {% endif %}
-            </ul>
-        </div>
-        <hr>
-        <div class="col-md-9"
-            {% block body %}
-            {% endblock %}
-        </div>
-        <div class="col-md-12"
+        <div class="row">
             {% block footer %}
                 {% include "auctions/includes/messages.html" %}
             {% endblock %}
