--- a/commerce/auctions/templates/auctions/includes/nav.html
+++ b/commerce/auctions/templates/auctions/includes/nav.html
@@ -1,20 +1,22 @@
-<ul class="nav flex-column nav-tabs">
-    <li class="nav-item">
-        <a class="nav-link" href="{% url 'index' %}">Active Listings</a>
-    </li>
-    {% if user.is_authenticated %}
+<div class="navbar" style="width: 100%;">
+    <ul class="nav nav-tabs">
         <li class="nav-item">
-            <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
+            <a class="nav-link" href="{% url 'index' %}">Active Listings</a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'create' %}">Create new listing</a>
-        </li>
-    {% else %}
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'login' %}">Log In</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'register' %}">Register</a>
-        </li>
-    {% endif %}
-</ul>
+        {% if user.is_authenticated %}
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'create' %}">Create new listing</a>
+            </li>
+        {% else %}
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'login' %}">Log In</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'register' %}">Register</a>
+            </li>
+        {% endif %}
+    </ul>
+</div>
