--- a/commerce/auctions/templates/auctions/includes/categories_nav.html
+++ b/commerce/auctions/templates/auctions/includes/categories_nav.html
@@ -1,10 +1,8 @@
-<div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">  
+<div class="nav flex-column nav-pills h-100" id="v-pills-tab" role="tablist" aria-orientation="vertical">  
     {% for CATEGORY, category in categories %}  
         {% if CATEGORY == current_listing_category %}
-            <a class="nav-link-active" id="v-pills-{{category}}-tab" data-toggle="pill" href="/category/{{CATEGORY}}" role="tab" aria-controls="pills-{{category}}" aria-selected="true">{{category}}</a>
-            
-        {% else %}
-            
+            <a class="nav-link active" id="v-pills-{{category}}-tab" data-toggle="pill" href="/category/{{CATEGORY}}" role="tab" aria-controls="pills-{{category}}" aria-selected="true">{{category}}</a>
+        {% else %}        
             <a class="nav-link" id="v-pills-{{category}}-tab" data-toggle="pill" href="/category/{{CATEGORY}}" role="tab" aria-controls="pills-{{category}}" aria-selected="false">{{category}}</a>
         {% endif %}
     {% endfor %}  
