--- a/commerce/auctions/templates/auctions/includes/messages.html
+++ b/commerce/auctions/templates/auctions/includes/messages.html
@@ -1,7 +1,8 @@
 {% if messages %}
-    <ul class="messages">
         {% for message in messages %}
-            <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+        
+            <div {% if message.extra_tags %} class="{{ message.tags }}" {% endif %} role="alert">
+                 {{ message }}
+            </div>
         {% endfor %}
-    </ul>
 {% endif %}
