Add open boolean and is_open() function add many to many field to user for watchlist

--- a/commerce/auctions/templates/auctions/listing.html
+++ b/commerce/auctions/templates/auctions/listing.html
@@ -12,11 +12,10 @@
 
         <h5> Auctioneer: <strong>{{ listing.auctioneer }}</strong></h5>
 
-        <h5>Starting Bid: {{ listing.starting_bid}}</h5>
-        <h5>Current Bid: {{ listing.get_current_bid }}</h5>
-
-
-
+        <h5>Starting Bid: £{{ listing.starting_bid}}</h5>
+        <h5>Current Bid: £{{ listing.get_current_bid }}</h5>
+        {% if user.use%}
+        <h5>You are to current high bidder!</h5>
         <h5> Auction ends: {{ listing.end_time }}</h5>
     </div>
     
