inform signed in users if they are highest bidder

--- a/commerce/auctions/templates/auctions/listing.html
+++ b/commerce/auctions/templates/auctions/listing.html
@@ -13,9 +13,10 @@
         <h5> Auctioneer: <strong>{{ listing.auctioneer }}</strong></h5>
 
         <h5>Starting Bid: £{{ listing.starting_bid}}</h5>
-        <h5>Current Bid: £{{ listing.get_current_bid }}</h5>
-        {% if user.use%}
-        <h5>You are to current high bidder!</h5>
+        <h5>Current Bid: £{{ current_bid_amount }}</h5>
+        {% if is_highest_bidder %}
+            <strong>You are the current high bidder!<strong>
+        {% endif %}
         <h5> Auction ends: {{ listing.end_time }}</h5>
     </div>
     
