--- a/commerce/auctions/templates/auctions/listing.html
+++ b/commerce/auctions/templates/auctions/listing.html
@@ -19,8 +19,16 @@
         {% endif %}
         <h5> Auction ends: {{ listing.end_time }}</h5>
         {% if is_auctioneer %}
-            <strong>You are the auctioneer!<strong>
-            <a href="#">End auction now</a>
+            <p><strong>You are the auctioneer!</strong></p>
+            <p><strong>If you want, you can</strong></p>
+            <p><a href="#">End auction now</a></p>
+        {% elif not user.isAuthenticated %}
+            
+            Please <a href="{% url 'login' %}">login</a> to place a bid. 
+        
+        {% else %}
+            <strong>Enter a bid:</strong>
+            {% include "auctions/includes/bid.html" %}
         {% endif %}
     </div>
     
