implement watchlist toggle, but some funky behaviour

--- a/commerce/auctions/templates/auctions/listing.html
+++ b/commerce/auctions/templates/auctions/listing.html
@@ -25,9 +25,13 @@
             <p><strong>You are the auctioneer!</strong></p>
             <p><strong>If you want, you can:</strong></p>
             <p><a href="#">End auction now</a></p>
-        {% elif user.isAuthenticated %}
+        {% elif user.is_authenticated %}
             <strong>Enter a bid:</strong>
             {% include "auctions/includes/bid.html" %}
+            <form method="POST" action="{%url 'toggle_watchlist' listing.id %}">
+                {% csrf_token %}
+                <input class="btn btn-sn" type="submit" value="Toggle watchlist">
+            </form>
         {% else %}
             Please <a href="{% url 'login' %}">login</a> to place a bid.   
         {% endif %}
