--- a/commerce/auctions/templates/auctions/includes/nav.html
+++ b/commerce/auctions/templates/auctions/includes/nav.html
@@ -10,6 +10,12 @@
         <li class="nav-item">
             <a class="nav-link" href="{% url 'create' %}">Create new listing</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'watchlist' %}">Watchlist</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'clear_watchlist' %}">Watchlist</a>
+        </li>
     {% else %}
         <li class="nav-item">
             <a class="nav-link" href="{% url 'login' %}">Log In</a>
