--- a/commerce/auctions/templates/auctions/listing.html
+++ b/commerce/auctions/templates/auctions/listing.html
@@ -30,7 +30,7 @@
             {% include "auctions/includes/bid.html" %}
             <form method="POST" action="{%url 'toggle_watchlist' listing.id %}">
                 {% csrf_token %}
-                <input class="btn btn-sn" type="submit" value="Toggle watchlist">
+                <input class="btn btn-sm" type="submit" value="Toggle watchlist">
             </form>
         {% else %}
             Please <a href="{% url 'login' %}">login</a> to place a bid.   
