--- a/commerce/auctions/templates/auctions/includes/listing_batch.html
+++ b/commerce/auctions/templates/auctions/includes/listing_batch.html
@@ -11,7 +11,7 @@
                         <p class="card-text">{{ listing.description}}</p>
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item">Auctioneer: {{ listing.auctioneer }}</li>
-                            <li class="list-group-item">Current Bid: {{ current_bid}}</li>
+                            <li class="list-group-item">Current Bid: {{ listing.current_bid }}</li>
                             <li class="list-group-item">Starting bid: {{ listing.starting_bid }}</li>
                             <li class="list-group-item">Start time: {{ listing.start_time }}</li>
                             <li class="list-group-item">End time: {{ listing.end_time }}</li>
