--- a/commerce/auctions/templates/auctions/index.html
+++ b/commerce/auctions/templates/auctions/index.html
@@ -2,7 +2,7 @@
 
 {% block body %}
     
-    <h2>Active Listings</h2>
+    <h2>{{ title }}</h2>
     {% include "auctions/includes/listing_batch.html" %}
     
 {% endblock %}
