--- a/commerce/auctions/templates/auctions/layout.html
+++ b/commerce/auctions/templates/auctions/layout.html
@@ -4,7 +4,7 @@
 
 <html lang="en">
     <head>
-        <title>{% block title %}Auctions{% endblock %}</title>
+        <title>{% block title %}T-bay{% endblock %}</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
