Add comment functionality

--- a/commerce/auctions/templates/auctions/listing.html
+++ b/commerce/auctions/templates/auctions/listing.html
@@ -30,8 +30,9 @@
             {% include "auctions/includes/bid.html" %}
             <form method="POST" action="{% url 'toggle_watchlist' listing.id %}">
                 {% csrf_token %}
-                <input class="btn btn-secondary" type="submit" value="Toggle watchlist">
+                <input class="btn btn-secondary" type="submit" value="Watch">
             </form>
+            {% include "auctions/includes/comment.html" %}
         {% else %}
             Please <a href="{% url 'login' %}">login</a> to place a bid.   
         {% endif %}
