refactor and rename

--- a/commerce/auctions/templates/auctions/includes/bid.html
+++ b/commerce/auctions/templates/auctions/includes/bid.html
@@ -2,7 +2,7 @@
     {% csrf_token %}
     <div>
         <table>
-            {{ form.as_table }}
+            {{ bid_form.as_table }}
         </table>
         <input class="btn-primary" type="submit" value="bid" />
     </div>
