Add close auction early functionality

--- a/commerce/auctions/templates/auctions/includes/listing_batch.html
+++ b/commerce/auctions/templates/auctions/includes/listing_batch.html
@@ -15,6 +15,7 @@
                             <li class="list-group-item">Starting bid: {{ listing.starting_bid }}</li>
                             <li class="list-group-item">Start time: {{ listing.start_time }}</li>
                             <li class="list-group-item">End time: {{ listing.end_time }}</li>
+                            <li class="list-group-item">Open: {{ listing.open }}</li>
                         </ul>
                     </div>
                 </div>
