--- a/commerce/auctions/templates/auctions/includes/messages.html
+++ b/commerce/auctions/templates/auctions/includes/messages.html
@@ -1,8 +1,10 @@
 {% if messages %}
         {% for message in messages %}
-        
-            <div {% if message.extra_tags %} class="{{ message.tags }}" {% endif %} role="alert">
-                 {{ message }}
+            <div class="alert {{ message.tags }} alert-dismissible" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="True">&times;</span>
+                </button>
+                {{ message }} 
             </div>
         {% endfor %}
 {% endif %}
