--- a/commerce/auctions/templates/auctions/layout.html
+++ b/commerce/auctions/templates/auctions/layout.html
@@ -7,6 +7,9 @@
         <title>{% block title %}T-bay{% endblock %}</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <script src="{% static 'js/jquery-3.6.0.slim.min.js' %}"></script>
+        <script src="{% static 'js/popper.min.js' %}"></script>
+        <script src="{% static 'js/bootstrap.min.js' %}"></script> 
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
         <link rel="stylesheet" href="{% static 'font_awesome/css/all.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/styles.css' %}">
@@ -51,8 +54,6 @@
                 </div>
             </div>
         </div>
-        <script src="{% static 'js/jquery-3.6.0.js' %}"></script>
-        <script src="{% static 'js/popper.min.js' %}"></script>
-        <script src="{% static 'js/bootstrap.min.js' %}"></script> 
+        
     </body>
 </html>
