separate bid form processing and comment form processing

--- a/commerce/auctions/templates/auctions/includes/bid.html
+++ b/commerce/auctions/templates/auctions/includes/bid.html
@@ -4,6 +4,6 @@
         <table>
             {{ bid_form.as_table }}
         </table>
-        <input class="btn-primary" type="submit" value="bid" />
+        <input class="btn-primary" type="submit" name="bid" value="bid" />
     </div>
 </form>
